ajout de la documentation CRUD du kine
